--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,7 @@
 version: '3.7'
 services:
-
-  postgres:
-    image: postgres:14-alpine
+  java-app:
+    build: ./image
+    image: java-app:1.0
     ports:
-      - '5434:5432'
-    volumes:
-      - ./data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=db
-      - POSTGRES_USER=user_login
-      - POSTGRES_PASSWORD=9mREsvXDs9Gk89Ef
+      - '9999:9999'
